Fixed Hybrid query for cases when it's wrapped into other compound queries (#498) (#501)
* Fixed nested field case

(cherry picked from commit 3991fe7c04e2f2c104c0be0365428c5747f21f6c)

Signed-off-by: Martin Gaievski <gaievski@amazon.com>
(cherry picked from commit 27a38cbc413d7147be55af3865025a10a9d6cca7)
Signed-off-by: Martin Gaievski <gaievski@amazon.com>